--- a/index.html
+++ b/index.html
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link type="text/css" href="css/style.css" rel="stylesheet">
-    <script type="text/javascript" src="js/jquery.min.js"></script>
-    <script type="text/javascript" src="js/script.js"></script>
+    <link href="css/style.css" rel="stylesheet">
+    <script src="js/jquery.min.js"></script>
+    <script src="js/script.js"></script>
     <title>Sketch!</title>
   </head>
   <body>
+    <div class="controls">
+      <div id="reset">Reset</div>
+    </div>
+    <div class="container" id="area">
 
-    <h1>Hello World!</h1>
+
+
+    </div>
 
   </body>
 </html>
