Added button styles

--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     <title>Sketch!</title>
   </head>
   <body>
-    <div class="controls">
-      <div id="reset">Reset</div>
+    <div class="btn-controls">
+    <form class="controls">
+      <button id="reset" type="submit">Reset</button>
+    </form>
     </div>
     <div class="container" id="area">
 
