--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   <body>
     <div class="btn-controls">
     <form class="controls">
-      <button id="reset" type="submit">Reset</button>
+      <button id="reset" type="reset">Reset</button>
+      <button id="size" type="button">Change grid Size</button>
     </form>
     </div>
     <div class="container" id="area">
