Added delGrid function and added it to make grid function

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <form class="controls">
       <button id="reset" type="reset">Reset</button>
       <button id="size" type="button">Change grid Size</button>
+      <button id="del" type="button">delete</button>
     </form>
     </div>
     <div class="container" id="area">
