Changed styling and tidy up

--- a/index.html
+++ b/index.html
@@ -10,15 +10,13 @@
     <div class="btn-controls">
     <form class="controls">
       <button id="reset" type="reset">Reset</button>
-      <button id="size" type="button">Change grid Size</button>
-      <button id="del" type="button">delete</button>
+      <button id="size" type="button">Change Grid Size</button>
+      <button id="del" type="button">Delete</button>
     </form>
     </div>
     <div class="container" id="area">
 
 
-
     </div>
-
   </body>
 </html>
