--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <form class="controls">
       <button id="reset" type="reset">Reset</button>
       <button id="size" type="button">Change Grid Size</button>
-      <button id="del" type="button">Delete</button>
+      <button id="gridLines" type="button">Toggle Grid</button>
     </form>
     </div>
     <div class="container" id="area">
