--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
       <button id="reset" type="reset">Reset</button>
       <button id="size" type="button">Change Grid Size</button>
       <button id="gridLines" type="button">Toggle Grid</button>
-      <button id="RandColBut" type="button">Colors</button>
-      <button id="Pencil" type="button">Pencil</button>
+      <button id="randColBut" type="button">Random Colors</button>
     </form>
     </div>
     <div class="container" id="area">
